# book_service

./: .env.example  .flake8  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build_images.yml  main.yml
alembic/: env.py
alembic/versions/: 9272285daca2_first_migration.py
docker/: default.conf  docker-compose-rmq.yaml  gRPC.Dockerfile  server-entrypoint.sh  web.Dockerfile
docs/: test_task.pdf:Zone.Identifier
grpc_service/: async_main.py  book_service_pb2.py  book_service_pb2_grpc.py  config.py  main.py  rabbitmq.py  server.py  services.py
grpc_service/reports/: log_file.log.1  log_file.log.2  log_file.log.3  log_file.log.4  log_file.log.5
protobufs/: book_service.proto
tests/: conftest.py  test_auth.py  test_db.py  test_main.py  test_user.py
tests/fixtures/: fixture_data.py  fixture_redis.py
web/: main.py
web/api/: routers.py
web/api/endpoints/: __init__.py  book.py  user.py  validators.py
web/core/: base.py  config.py  crud.py  db.py  init_db.py  models.py  rabbitmq.py  redis.py  user.py
web/schemas/: book.py
