[tool.poetry]
name = "book_service"
version = "0.1.0"
description = "testwork"
authors = ["Alex Naumov <algena75@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "web" },
    { include = "grpc_service" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.2"
uvicorn = {version = "0.29.0", extras = ["standard"]}
pydantic-settings = "2.2.1"
asyncpg = {version = "0.29.0", extras = ["postgres"]}
aio-pika = "^9.4.3"


[tool.poetry.group.web.dependencies]
sqlalchemy = "2.0.29"
alembic = "1.13.1"
fastapi-users = {version = "13.0.0", extras = ["sqlalchemy"]}
redis = "^5.1.0"


[tool.poetry.group.grpc_service.dependencies]
grpcio-tools = "^1.66.1"
protobuf = "5.27.2"



[tool.poetry.group.test.dependencies]
flake8 = "^7.1.1"
pytest = "8.2.0"
httpx = "0.27.0"
fakeredis = "^2.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
